# vastdb_nifi

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE.txt  README.md  hatch_build.py  pyproject.toml
.github/workflows/: main.yml  release.yaml
docs/: DeleteVastDB.md  DropVastDB.md  ImportVastDB.md  PROCESSORS.md  PutVastDB.md  QueryVastDBTable.md  UpdateVastDB.md  bug_report.md
src/vastdb_nifi/: __about__.py
src/vastdb_nifi/processors/: DeleteVastDB.py  DropVastDBTable.py  ImportVastDB.py  PutVastDB.py  QueryVastDBTable.py  UpdateVastDB.py  predicate_parser.py
tests/vastdb_nifi/processors/: __init__.py  test_predicate_parser.py
workflows/: main.yml
